Rest for symfony

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 # Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
+app/cache/
+app/logs/
 
 # Cache and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
+var/cache/*
+var/logs/*
 
 # Parameters
 /app/config/parameters.yml
