--- a/src/EduSpeakBundle/Resources/config/routing.yml
+++ b/src/EduSpeakBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 edu_speak_homepage:
     path:     /
     defaults: { _controller: EduSpeakBundle:Default:index }
+
+edu_speek_User:
+    type: rest
+    prefix: /v1
+    resource: "EduSpeakBundle\Controller\UserController"
