--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,8 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+    serializer:
+        enabled: true
 
 # Twig Configuration
 twig:
@@ -94,3 +96,13 @@ sonata_block:
 
 sonata_admin:
     title:      Edu Speak Bundle
+
+fos_rest:
+    routing_loader:
+        default_format: json
+    view:
+        view_response_listener: true
+
+sensio_framework_extra:
+    view:
+        annotations: false
