--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,3 +17,8 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+
+users:
+    type: rest
+    prefix: /api
+    resource: "@EduSpeakBundle/Resources/config/routing.yml"
