OAuth2 for symfony

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -22,3 +22,13 @@ users:
     type: rest
     prefix: /api
     resource: "@EduSpeakBundle/Resources/config/routing.yml"
+
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
+
+fos_oauth_server_token:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+
+fos_oauth_server_authorize:
+    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
