--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,10 +81,9 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-fos_user:
-    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-    firewall_name: main
-    user_class: EduSpeakBundle\Entity\User
+nelmio_api_doc: ~
+
+######## SONATA CONFIG #######
 
 sonata_block:
     default_contexts: [cms]
@@ -97,6 +96,13 @@ sonata_block:
 sonata_admin:
     title:      Edu Speak Bundle
 
+###### FOS CONFIGURATION #####
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: api
+    user_class: EduSpeakBundle\Entity\User
+
 fos_rest:
     routing_loader:
         default_format: json
@@ -106,3 +112,12 @@ fos_rest:
 sensio_framework_extra:
     view:
         annotations: false
+
+fos_oauth_server:
+    db_driver:           orm
+    client_class:        EduSpeakBundle\Entity\Client
+    access_token_class:  EduSpeakBundle\Entity\AccessToken
+    refresh_token_class: EduSpeakBundle\Entity\RefreshToken
+    auth_code_class:     EduSpeakBundle\Entity\AuthCode
+    service:
+        user_provider: fos_user.user_manager
