--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "friendsofsymfony/rest-bundle": "^1.7",
         "jms/serializer-bundle": "@dev",
         "nelmio/api-doc-bundle": "@dev",
-        "friendsofsymfony/oauth-server-bundle": "^1.4"
+        "friendsofsymfony/oauth-server-bundle": "^1.4",
+        "nelmio/cors-bundle": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
