--- a/src/ChatBundle/Resources/config/routing.yml
+++ b/src/ChatBundle/Resources/config/routing.yml
@@ -1,3 +1,11 @@
 chat_homepage:
-    path:     /hello/{name}
+    path:     /
     defaults: { _controller: ChatBundle:Default:index }
+
+chat_list:
+    path:     /list
+    defaults: { _controller: ChatBundle:Discussion:show }
+
+chat_create:
+    path:     /start/{id}
+    defaults: { _controller: ChatBundle:Discussion:create }
