Doesn't duplication discussion anymore

--- a/src/ChatBundle/Resources/config/routing.yml
+++ b/src/ChatBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ chat_list:
 chat_create:
     path:     /start/{id}
     defaults: { _controller: ChatBundle:Discussion:create }
+
+chat_display:
+    path:     /{id}
+    defaults: { _controller: ChatBundle:Discussion:display }
