--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "jms/serializer-bundle": "@dev",
         "nelmio/api-doc-bundle": "@dev",
         "friendsofsymfony/oauth-server-bundle": "^1.4",
-        "nelmio/cors-bundle": "^1.4"
+        "nelmio/cors-bundle": "^1.4",
+        "gos/web-socket-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
