--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,7 +27,7 @@ framework:
     trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        handler_id: session.handler.pdo
     fragments:       ~
     http_method_override: true
     serializer:
@@ -149,8 +149,32 @@ nelmio_cors:
             max_age: 3600
             hosts: ['^api\.']
 
-# Web Socket Configuration
 gos_web_socket:
+    client:
+        firewall: secured_area #can be an array of firewalls
+        session_handler: @session.handler.pdo
+        storage:
+            driver: @gos_web_socket.server.in_memory.client_storage.driver
+            decorator: ~
+    shared_config: true
+    assetic: true #use assetic bundle
     server:
-        port: 8080        #The port the socket server will listen on
-        host: 127.0.0.1   #The host ip to bind to
+        port: 8080 # Required, Example 127.0.0.1
+        host: 127.0.0.1 # Required, Example 1337s
+        origin_check:         false
+        router:
+            resources:
+                - @ChatBundle/Resources/config/pubsub/routing.yml
+    rpc:                  []
+    topics:               []
+    periodic:             []
+    servers:              []
+    origins:              []
+
+services:
+    session.handler.pdo:
+        class:     Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
+        public:    false
+        arguments:
+            - 'mysql:host=%database_host%;port=%database_port%;dbname=%database_name%'
+            - { db_username: '%database_user%', db_password: '%database_password%' }
