--- a/src/ChatBundle/Resources/config/services.yml
+++ b/src/ChatBundle/Resources/config/services.yml
@@ -1,4 +1,16 @@
 services:
-#    chat.example:
-#        class: ChatBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    chat_bundle.client_manager_service:
+        class: Gos\Bundle\WebSocketBundle\Client\ClientManipulatorInterface
+        tags:
+            - { name: client_manager_service }
+
+    chat_bundle.rpc_sample_service:
+        class: ChatBundle\RPC\ChatService
+        tags:
+            - { name: gos_web_socket.rpc }
+
+    chat_bundle.topic_sample_service:
+        class: ChatBundle\Topic\ChatTopic
+        tags:
+            - { name: gos_web_socket.topic }
+        arguments: ['@service_container']
