--- a/src/EduSpeakBundle/Resources/config/admin.yml
+++ b/src/EduSpeakBundle/Resources/config/admin.yml
@@ -2,7 +2,7 @@ services:
     sonata.admin.user:
         class: EduSpeakBundle\Admin\UserAdmin
         tags:
-            - { name: sonata.admin, manager_type: orm, group: "Content", label: "User" }
+            - { name: sonata.admin, manager_type: orm, group: "User", label: "User" }
         arguments:
             - ~
             - EduSpeakBundle\Entity\User
