--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -178,3 +178,11 @@ services:
         arguments:
             - 'mysql:host=%database_host%;port=%database_port%;dbname=%database_name%'
             - { db_username: '%database_user%', db_password: '%database_password%' }
+
+hwi_oauth:
+  firewall_name: main
+  resource_owners:
+    facebook:
+      type: facebook
+      client_id: %oauth.facebook.id%
+      client_secret: %oauth.facebook.secret%
