--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,13 +14,24 @@ security:
 
     firewalls:
         main:
-            pattern: ^/
-            form_login:
-                provider: fos_userbundle
-                csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+#            pattern: ^/
+#            form_login:
+#                provider: fos_userbundle
+#            csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
 
-            logout:       true
-            anonymous:    true
+#           logout:       true
+#           anonymous:    true
+            context: user
+            pattern: /.*
+            oauth:
+                resource_owners:
+                    facebook: "/login/check-facebook"
+                login_path: /connect
+                failure_path: /connect
+                oauth_user_provider:
+                    service: eduspeak.oauth.user_provider
+            logout: true
+            anonymous: true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
