--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "nelmio/api-doc-bundle": "@dev",
         "friendsofsymfony/oauth-server-bundle": "^1.4",
         "nelmio/cors-bundle": "^1.4",
-        "gos/web-socket-bundle": "^1.6"
+        "gos/web-socket-bundle": "^1.6",
+        "hwi/oauth-bundle": "0.4.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
