--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    oauth.facebook.id: "1304756836217376"
+    oauth.facebook.secret: "c6ae1d57a7aa64293008d10e5c7972d5"
 
 framework:
     esi:             ~
