--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,13 +14,13 @@ security:
 
     firewalls:
         main:
-#            pattern: ^/
-#            form_login:
-#                provider: fos_userbundle
-#            csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
+            pattern: ^/
+            form_login:
+               provider: fos_userbundle
+               csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
 
-#           logout:       true
-#           anonymous:    true
+        #   logout:       true
+        #   anonymous:    true
             context: user
             pattern: /.*
             oauth:
