--- a/src/ChatBundle/Resources/config/routing.yml
+++ b/src/ChatBundle/Resources/config/routing.yml
@@ -10,6 +10,18 @@ chat_create:
     path:     /start/{id}
     defaults: { _controller: ChatBundle:Discussion:create }
 
+edu_speak_search:
+    path:     /search
+    defaults: { _controller: EduSpeakBundle:Match:search }
+
+edu_speak_friend_list:
+    path:     /friend/list
+    defaults: { _controller: EduSpeakBundle:Friendship:show }
+
+edu_speak_add_friend:
+    path:     /friend/{id}
+    defaults: { _controller: EduSpeakBundle:Friendship:create }
+
 chat_display:
     path:     /{id}
     defaults: { _controller: ChatBundle:Discussion:display }
