--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "doctrine/phpcr-bundle": "1.2.*",
         "doctrine/dbal":"*",
         "jackalope/jackalope":"1.2.*",
-        "jackalope/jackalope-doctrine-dbal":"1.2.*"
+        "jackalope/jackalope-doctrine-dbal":"1.2.*",
+        "sonata-project/intl-bundle": "^2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
