--- a/src/EduSpeakBundle/Resources/config/routing.yml
+++ b/src/EduSpeakBundle/Resources/config/routing.yml
@@ -2,6 +2,18 @@ edu_speak_profil:
     path:     /user/{id}
     defaults: { _controller: EduSpeakBundle:Default:profil }
 
+edu_speak_search:
+    path:     /search
+    defaults: { _controller: EduSpeakBundle:Match:search }
+
+edu_speak_friend_list:
+    path:     /friend/list
+    defaults: { _controller: EduSpeakBundle:Friendship:show }
+
+edu_speak_add_friend:
+    path:     /friend/{id}
+    defaults: { _controller: EduSpeakBundle:Friendship:create }
+
 edu_speak_homepage:
     path:     /
     defaults: { _controller: EduSpeakBundle:Default:index }
