--- a/src/EduSpeakBundle/Resources/config/services.yml
+++ b/src/EduSpeakBundle/Resources/config/services.yml
@@ -6,3 +6,8 @@ services:
         class: "%eduspeak.oauth.user_provider.class%"
         #this is the place where the properties are passed to the UserProvider - see config.yml
         arguments: [@fos_user.user_manager,{facebook: facebook_id}]
+
+    user_type_form:
+        class: EduSpeakBundle\Form\Type\UserType
+        tags:
+            - { name: user.type }
