--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -182,7 +182,7 @@ fos_oauth_server:
 nelmio_cors:
     defaults:
         allow_credentials: false
-        allow_origin: []
+        allow_origin: ['*']
         allow_headers: []
         allow_methods: []
         expose_headers: []
@@ -197,7 +197,7 @@ nelmio_cors:
             max_age: 3600
         '^/':
             origin_regex: true
-            allow_origin: ['^http://localhost:[0-9]+']
+            allow_origin: ['*']
             allow_headers: ['X-Custom-Auth']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
