--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "doctrine/dbal":"*",
         "jackalope/jackalope":"1.2.*",
         "jackalope/jackalope-doctrine-dbal":"1.2.*",
-        "sonata-project/intl-bundle": "^2.2"
+        "sonata-project/intl-bundle": "^2.2",
+        "algolia/algolia-search-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
