--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -245,3 +245,12 @@ hwi_oauth:
             type: facebook
             client_id: %oauth.facebook.id%
             client_secret: %oauth.facebook.secret%
+            scope:         "email"
+            infos_url:     "https://graph.facebook.com/me?fields=id,first_name,last_name,email,picture.type(square)"
+            paths:
+                email:          email
+                firstname:      first_name
+                lastname:       last_name
+                profilepicture: picture.data.url
+            options:
+                display:    popup
